# arvos

./: Cargo.toml  README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: on-board.1740011325027.pdom  on-board.1740145037079.pdom  on-board.1740277745073.pdom  on-board.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/on-board/: .location  .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  3.tree  4.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
comms-testing/: dual-port.py  ports.py  test-1.py
on-board/: .cproject  .project
on-board/Debug/: makefile  on-board.elf  on-board.list  on-board.map
on-board/Debug/Src/: subdir.mk
on-board/Debug/Startup/: subdir.mk
on-board/Inc/: comms.h
on-board/Src/: comms.c  main.cpp
on-board/Src/systems/: engine.h
on-board/src/: main.rs
on-board/src/events/: example_event.rs  mod.rs
on-board/src/subsystems/: example_subsystem.rs  mod.rs
software/on-board/: Cargo.toml
software/on-board/src/: main.rs
software/on-board/src/events/: event_manager.rs  event_trait.rs  events.rs  mod.rs
src/: constants.rs  main.rs  status_codes.rs
src/states/: mod.rs  pre_launch.rs
src/subsystems/: communications.rs  engine.rs  mod.rs
(+13 files in other folders)
