[package]
name = "on-board"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32h7xx-hal = { version = "0.15.1", features = ["stm32h743v"] }
embedded-hal = "0.2"
panic-halt = "0.2"
heapless = { version = "0.7", default-features = false }